<resources>
    <!--identifier strings (string keys)-->
    <string name="log_tag">log_tag</string>
    <string name="notification_setting">fourpointoh.closebuy.notification_setting</string>
    <string name="radius_setting">fourpointoh.closebuy.radius_setting</string>
    <string name="snooze_setting">fourpointoh.closebuy.snooze_setting</string>
    <string name="update_action">fourpointoh.closebuy.update_intent_action</string>
    <string name="first_app_launch">fourpointoh.closebuy.first_app_launch</string>
    <string name="preference_file">fourpointoh.closebuy.prefs</string>

    <!--User facing strings-->
    <string name="app_name">CloseBuy</string>
    <string name="notification_setting_title">Notifications</string>
    <string name="turn_notifications_on">Turn notifications on</string>
    <string name="turn_notifications_off">Turn notifications off</string>


    <!--Add text activity strings-->
    <string name="edit_message">ITEM NAME</string>
    <string name="toggle_message">Remind me only in store</string>
    <string name="Categories">STORE CATEGORY</string>
    <string name="Categories2">Select one or more type of stores that you would like to be reminded of.</string>
    <string name="Category1">Grocery</string>
    <string name="Category2">Convenience</string>
    <string name="Done">Create Reminder</string>
    <string name="Done2">Save Changes</string>
    <string name="feature_not_ready">This feature is not implemented yet, try again later.</string>

    <!--Snooze options in the settings menu-->
    <!--This should be changed alongside of the minutes int array below-->
    <string-array name="snooze_options_strings">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <integer-array name="snooze_options_minute_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>3600</item>
        <item>720</item>
        <item>1440</item>
    </integer-array>
</resources>
