<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="#ffffff">
    <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:inputType="textAutoComplete|textAutoCorrect|text"
        android:background="@android:color/transparent"/>

    <include
        layout="@layout/line_border"
        android:id="@+id/border1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/edit_message"
        android:layout_marginTop="14dp"/>

    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_message"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/border1"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/edit_message"
        android:checked="false" />

    <include
        layout="@layout/line_border"
        android:id="@+id/border2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/mySwitch"
        android:layout_marginTop="14dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Categories"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/border2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#555555"
        android:textSize="13sp"
        android:text="@string/Categories2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/textView1" />

    <CheckBox
        android:id="@+id/grocery"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:text="@string/Category1"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:onClick="onCheckboxClicked"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#333333"
        android:textSize="13dp"
        android:button="@null"
        android:background="@drawable/checkbox_selector"/>

    <CheckBox
        android:id="@+id/convenience"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:text="@string/Category2"
        android:layout_alignTop="@+id/pharmacy"
        android:layout_centerHorizontal="true"
        android:onClick="onCheckboxClicked"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#333333"
        android:textSize="13dp"
        android:button="@null"
        android:background="@drawable/checkbox_selector"/>

    <CheckBox
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:text="Pharmacy"
        android:id="@+id/pharmacy"
        android:checked="false"
        android:layout_above="@+id/hardware"
        android:layout_alignEnd="@+id/btnDone"
        android:onClick="onCheckboxClicked"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#333333"
        android:button="@null"
        android:background="@drawable/checkbox_selector"/>

    <CheckBox
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:text="Hardware"
        android:id="@+id/hardware"
        android:layout_marginTop="30dp"
        android:checked="false"
        android:layout_below="@+id/grocery"
        android:layout_alignParentStart="true"
        android:onClick="onCheckboxClicked"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#333333"
        android:button="@null"
        android:background="@drawable/checkbox_selector"/>

    <CheckBox
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:text="Pet Care"
        android:id="@+id/petCare"
        android:checked="false"
        android:layout_alignTop="@+id/hardware"
        android:layout_alignStart="@+id/convenience"
        android:layout_alignEnd="@+id/convenience"
        android:onClick="onCheckboxClicked"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#333333"
        android:textSize="13dp"
        android:button="@null"
        android:background="@drawable/checkbox_selector"/>

    <CheckBox
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:text="Electronics"
        android:id="@+id/electronics"
        android:checked="false"
        android:layout_alignTop="@+id/petCare"
        android:layout_alignStart="@+id/pharmacy"
        android:onClick="onCheckboxClicked"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#333333"
        android:textSize="13dp"
        android:button="@null"
        android:background="@drawable/checkbox_selector"/>

    <TextView
        android:id="@+id/btnDone"
        android:layout_width="302dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/Done2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/edit_message"
        android:background="#81D5B5"
        android:textColor="#ffffff"
        android:textSize="15sp"/>

</RelativeLayout>